--- a/website/content/docs/commands/operator/init.mdx
+++ b/website/content/docs/commands/operator/init.mdx
@@ -16,9 +16,9 @@ Vault servers share the same storage backend in HA mode, you only need to
 initialize one Vault to initialize the storage backend.
 This command cannot be run against already-initialized Vault cluster.
 
-During initialization, Vault generates an in-memory root key, which is stored alongside all other Vault data. The root key is considered encrypted and requires what's called an _unseal key_ to descrypt it.
+During initialization, Vault generates an in-memory root key, which is stored in the storage backend alongside all other Vault data. The root key itself is encrypted and requires an _unseal key_ to decrypt it.
 
-The default Vault config uses a Shamir seal. Instead of distributing the unseal key as a single key to an operator, Vault uses an algorithm known as [Shamir's Secret Sharing](https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing) to split the key into shards. A certain threshold of shards is required to reconstruct the unseal key, which is then used to decrypt the root key.
+The default Vault configuration uses [Shamir's Secret Sharing](https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing) to split the root key into a configured number of shards (referred as key shares, or unseal keys). A certain threshold of shards is required to reconstruct the root key, which is then used to decrypt the Vault's encryption key.
 
 Refer to the [Seal/Unseal](/docs/concepts/seal#seal-unseal) documentation for further details.
 
