--- a/website/content/docs/internals/architecture.mdx
+++ b/website/content/docs/internals/architecture.mdx
@@ -33,17 +33,20 @@ When the Vault server is started, it must be provided with a storage backend so
 that data is available across restarts. The HTTP API similarly must be started
 by the Vault server on start so that clients can interact with it.
 
-When a Vault server is started, it starts in a _sealed_ state. In this state, while Vault is configured to know where and how to access the physical storage, it does not know how to decrpyt any of it. Vault needs the _encyption key_ in order to decrypt the data. However, the encryption key is also stored with the data. So, to decrypt the encryption key, you will need to gain access to the root key, and in order to obtain the root key, Vault must be in a _unsealed_ state. _Unsealing_ is the process of obtaining the plaintext root key necessary to read the decyrption key to decrypt the data and allow access to the Vault.
+When a Vault server is started, it starts in a _sealed_ state. Before any
+operation can be performed on the Vault, it must be _unsealed_. This is done by
+providing the unseal keys. When the Vault is initialized, it generates an
+encryption key which is used to protect all Vault data. This key is protected by
+a root key. By default, Vault uses [Shamir's Secret
+Sharing](https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing) to split the
+root key into a configured number of shards (referred as key shares or unseal
+keys). A certain threshold of shards is required to reconstruct the root key,
+which is then used to decrypt the Vault's encryption key. 
 
-But, there is one additional mechanism to keep in mind and that is since the root key is stored alongside all other Vault data, it too is encrypted and requires unseal keys to decrypt it.
+![Unseal keys](/img/unseal.png)
 
-The default Vault config uses a Shamir seal. Instead of distributing the unseal key as a single key to an operator, Vault uses an algorithm known as [Shamir's Secret Sharing](https://en.wikipedia.org/wiki/Shamir%27s_Secret_Sharing) to split the root key into a configured number of shards. A certain threshold of shards is required to reconstruct the root key, which is then used to decrypt the Vault's encryption key.
-
-**This is the unseal process:** the shards are added one at a time (in any order) until enough shards are present to reconstruct the key and decrypt the root key.
-
-[![Unseal Key](/img/unseal.png)](/img/unseal.png)
-
-Refer to the [Seal/Unseal](/docs/concepts/seal#seal-unseal) documentation for further details.
+Refer to the [Seal/Unseal](/docs/concepts/seal#seal-unseal) documentation for
+further details.
 
 The number of shares and the minimum threshold required can both be specified.
 Shamir's technique can be disabled, and the root key can be used directly for
@@ -51,6 +54,10 @@ unsealing. Once Vault retrieves the encryption key, it is able to decrypt the
 data in the storage backend, and enters the _unsealed_ state. Once unsealed,
 Vault loads all of the configured audit devices, auth methods, and secrets
 engines.
+
+-> The default Vault configuration uses a Shamir seal; however, Vault can be [auto
+unseal](/docs/concepts/seal#auto-unseal) by a trusted cloud key management
+system (KMS) or hardware security module (HSM) to increase security.
 
 The configuration of those audit devices, auth methods, and secrets engines must
 be stored in Vault since they are security sensitive. Only users with the
