--- a/website/content/docs/secrets/pki/rotation-primitives.mdx
+++ b/website/content/docs/secrets/pki/rotation-primitives.mdx
@@ -1,6 +1,6 @@
 ---
 layout: docs
-page_title: PKI - Secrets Engine: Rotation Primitives
+page_title: 'PKI - Secrets Engine: Rotation Primitives'
 description: The PKI secrets engine for Vault generates TLS certificates.
 ---
 
@@ -82,8 +82,8 @@ The following fields on the final certificate are relevant to rotation:
    - The latter is a dangerous restriction for the purposes of rotation: it
      prevents cross-signing and reissuance as the new issuing certificates
      (while having the same backing key material) will have different serial
-     numbers. See the Limitations of Ratcheting section below for more
-     information on this restriction.
+     numbers. See the [Limitations of Primitives](#limitations-of-primitives)
+     section below for more information on this restriction.
  - The Serial Number of this certificate.
    - This field is unique to a specific issuer; when a certificate is
      reissued by its parent authority, it will always have a different serial
@@ -116,7 +116,7 @@ root, any devices connecting to the service would not know the difference.
 
 Rotation of intermediate certificates is almost as easy. Assuming a decent
 operational setup (wherein during end-entity issuance, the full certificate
-chain is updated in the service’s configuration), this should be as easy as
+chain is updated in the service's configuration), this should be as easy as
 creating a new intermediate CA, signing it against the root CA, and then
 beginning issuance against the new intermediate certificate. In Vault, if
 the intermediate is generated in an existing mount path (or is moved into
@@ -142,6 +142,202 @@ Key to their success is the following note:
    with the same subject but different public keys cannot validate the same
    leaf certificate; only if the keys are the same can this occur.
 
+### Cross-Signed Primitive
+
+This is the most common type of rotation primitive. A common CSR is signed by
+two CAs, resulting in two certificates. These certificates must have the same
+Subject (but may have different Issuers and will have different Serial Numbers)
+and the same backing key material, to allow certificates they sign to be
+trusted by either variant.
+
+Note that, due to restrictions in how end-entity certificates are used and
+validated (services and validation libraries expect only one), cross-signing
+most typically only applies to intermediate.
+
+#### Cross-Signed Roots
+
+Technically, cross-signing can occur between two roots, allowing trust bundles
+with either root to validate certs issued through the other. However, this
+process creates a certificate that is effectively an intermediate (as it is
+no longer self-signed) and usually must be served alongside the trust chain.
+Given this restriction, it's preferable to instead cross-sign the top-level
+intermediates under the root unless strictly necessary when the old root
+certificate has been used to directly issue leaf certificates.
+
+##### Process Flow
+
+```
+        -------------------
+       | generate key pair | -------------> ...
+        -------------------                 ...
+           |            |                   ...
+ --------------        --------------       ...
+| generate CSR |      | generate CSR |      ...
+ --------------        --------------       ...
+         |                   |              ...
+    -----------         -----------         ...
+   | signed by |       | signed by |        ...
+   | root A    |       | root B    |        ...
+    -----------         -----------         ...
+```
+
+Here, a key pair was generated at some point in time. Two CSRs are created and
+sent to two different root authorities (Root A and Root B). These result in two
+separate certificates (potentially with different validity periods) with the
+same Subject and same backing key material.
+
+Note that this cross-signing need not happen simultaneously; there could be a
+gap of several years between the first and second certificate. Additionally,
+there's no limit on the number of cross-signed "duplicate" (used loosely--with
+the same subject and key material) certificates: this could be cross-signed
+by many different root certificates if necessary and desired.
+
+##### Certificate Hierarchy
+
+```
+ --------                                            --------
+| root A |                                          | root B |
+ --------                                            --------
+   |                                                      |
+ ----------------                            ----------------
+| intermediate C |  <- same key material -> | intermediate D |
+ ----------------              |             ----------------
+                               |
+                      -------------------
+                     | leaf certificates |
+                      -------------------
+```
+
+The above process results in two trust paths: either of root A or root B (or
+both) could exist in the client's trust stores and the leaf certificate would
+validate correctly. Because the same key material is used for both intermediate
+certificates (C and D), the issued leaf certificate's signature field would
+be the same regardless of which intermediate was contacted.
+
+Cross-signing is thus a unifying primitive; two separate trust paths now join
+into a single one, by having leaf certificate's issuer field to point to two
+separate paths (via duplication of the certificate in the chain) and would be
+conditionally validated based on which root is present in the trust store.
+
+This construct is documented and used in several places:
+
+ - https://letsencrypt.org/certificates/
+ - https://scotthelme.co.uk/cross-signing-alternate-trust-paths-how-they-work/
+ - https://security.stackexchange.com/questions/14043/what-is-the-use-of-cross-signing-certificates-in-x-509
+
+### Reissuance Primitive
+
+The second most common type of rotation primitive. In this scheme, the existing
+key material is used to generate a new certificate, usually at a much later
+point in time from the existing issuance.
+
+While similar to the cross-signed primitive, this one differs in that usually
+the reissuance happens after the original certificate expires or is close to
+expiration and is re-issued by the original root CA. In the event of a
+self-signed certificate (e.g., a root certificate), this parent certificate
+would be itself. In both cases, this changes the contents of the certificate
+(due to the new serial number) but allows all existing leaf signatures to
+still validate.
+
+Unlike the cross-signed primitive, this primitive type can be used on all
+types of certificates (including leaves, intermediates, and roots).
+
+#### Process Flow
+
+```
+          -------------------
+         | generate key pair | ---------------> ...
+          -------------------                   ...
+           |              |                     ...
+ --------------           --------------        ...
+| generate CSR |   <->   | generate CSR |       ...
+ --------------           --------------        ...
+         |                    |                 ...
+ ------------------      ------------------     ...
+| signed by issuer | -> | signed by issuer | -> ...
+ ------------------      ------------------     ...
+```
+
+In this process flow, a single key pair is generated at some point in time
+and stored. The CSR (with same requested fields) is generated from this
+common key material and signed by the same issuer at multiple points in
+time, preserving all critical fields (Subject, Issuer, &c). While there is
+strictly no limit on the number of times a key can be reissued, at some point
+safety would dictate the key material should be rotated instead of being
+continually reissued.
+
+#### Certificate Hierarchy
+
+```
+                          ------
+              -----------| root |-------------
+             /            ------              \
+             |                                |
+ ---------------                           ---------------
+| original cert | <- same key material -> | reissued cert |
+ ---------------              |            ---------------
+                              |
+                      -------------------
+                     | leaf certificates |
+                      -------------------
+```
+
+Note that while this again results in two trust paths, depending on which
+intermediate certificate is presented and is still valid, only a root need be
+trusted. When a reissued certificate is a root certificate, the issuance link is
+simply self-loop. But, in this case, note that both certificates are
+(technically) valid issuers of each other. This means it should be possible to
+provide a re-issued root certificate in the TLS certificate chain and have it
+chain back to an existing root certificate in a trust store.
+
+This primitive type is thus an incrementing primitive; the life cycle of an
+existing key is extended into the future by issuing a new certificate with the
+same key material from the existing authority.
+
+### Temporal Primitives
+
+We can use the above primitive types to rotate roots and intermediates to new
+keys and extend their lifetimes. This time-based rotation is what ultimately
+allows us to rotate root certificates.
+
+There's two main variants of this: a forward primitive, wherein an old
+certificate is used to bless new key material, and a backwards primitive,
+wherein a new certificate is used to bless old key material. Both of these
+primitives are independently used by Let's Encrypt in the aforementioned
+chain of trust document:
+
+ - The link from DST Root CA X3 to ISRG Root X1 is an example of a forward
+   primitive.
+ - The link from ISRG Root X1 to R3 (which was originally signed by DST Root
+   CA X3) is an example of a backwards primitive.
+
+For most organizations with a hierarchical structured CA setup, cross-signing
+all intermediates with both the new and old root CAs is sufficient for root
+rotation.
+
+However, for organizations which have directly issued leaf certificates from a
+root, the old root will need to be reissued under the new root (with shorter
+duration) to allow these certificates to continue to validate. This combines
+both of the above primitives (cross-signing and reissuance) into a single
+backwards primitive step. In the future, these organizations should probably
+move to a more standard, hierarchical setup.
+
+### Limitations of Primitives
+
+The certificate's Authority Key Identifier extension field may contain either or
+both of the issuer's keyIdentifier (a hash of the public key) or both the
+issuer's Subject and Serial Number fields. Generating certificates with the
+latter enabled (luckily not possible in Vault, especially so since Vault uses
+strictly random serial numbers) prevents building a proper cross-signed chain
+without re-issuing the same serial number, which will not work with most
+browsers' trust stores and validation engines, due to [caching of certificates]
+(https://support.mozilla.org/en-US/kb/Certificate-contains-the-same-serial-number-as-another-certificate)
+used in successful validations. In the strictest sense, when using a
+cross-signing primitive (from a different CA), the intermediate could be reissued
+with the same serial number, assuming no previous certificate was issued by that
+CA with that serial. This does not work when using a reissuance primitive as these
+are technically the same authority and thus this authority must issue
+certificates with unique serial numbers.
 
 ## Learn
 
