Add missing links in rotation primitives doc
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/rotation-primitives.mdx
+++ b/website/content/docs/secrets/pki/rotation-primitives.mdx
@@ -15,7 +15,7 @@ managed by Vault.
 
 X.509 is a complex specification; modern implementations tend to refer to
 [RFC 5280](https://datatracker.ietf.org/doc/html/rfc5280) for specific
-details. For validation of certificates, both that RFC and the TLS
+details. For validation of certificates, both RFC 5280 and the TLS
 validation [RFC 6125](https://datatracker.ietf.org/doc/html/rfc6125) are
 important for understanding how to achieve rotation.
 
@@ -46,35 +46,41 @@ There are some important restrictions here:
 
 The following fields on the final certificate are relevant to rotation:
 
- - The backing public/private key material (Subject Public Key Info).
+ - The backing [public](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.2.7)
+   and private key material (Subject Public Key Info).
    - Note that the private key is not included in the certificate but is
      uniquely determined by the public key material.
- - The Subject of the certificate.
+ - The [Subject](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.2.6) of the certificate.
    - This identifies the entity to which the certificate was issued. While the
-     SAN values (in the Subject Alternative Name extension) is useful when
-     validating TLS Server certificates against the negotiated hostname and URI,
-     it isn't relevant for the purposes of validating intermediate certificate
-     chains or in rotation.
- - The Validity period of this certificate.
+     SAN values (in the [Subject Alternative Name](https://datatracker.ietf.org/doc/html/rfc5280#section-4.2.1.6)
+     extension) is useful when validating TLS Server certificates against the
+     negotiated hostname and URI, it isn't generally relevant for the purposes
+     of validating intermediate certificate chains or in rotation.
+ - The [Validity](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.2.5)
+   period of this certificate.
    - Notably, RFC 5280 does not place any requirements around the issued
      certificate's validity period relative to the validity period of the
-     issuing certificate. However, it does state that certificates ought to be
-     revoked if their status cannot be maintained up to their notAfter date.
-     This is why Vault 1.11's `/pki/issuer/:issuer_ref` configuration endpoint
-     maintains the `leaf_not_after_behavior` per-issuer rather than per-role.
+     issuing certificate. However, it [does state](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.2.5)
+     that certificates ought to be revoked if their status cannot be maintained
+     up to their notAfter date. This is why Vault 1.11's `/pki/issuer/:issuer_ref`
+     configuration endpoint maintains the `leaf_not_after_behavior` per-issuer
+     rather than per-role.
    - Additionally, some browsers will place ultimate trust in the certificates
      in their trust stores, even when these certificates are expired.
      - Note that this only applies to certificates in the trust store; validity
        periods will still be enforced for certificates not in the store (such
        as intermediates).
- - The Issuer and signatureValue of this certificate.
+ - The [Issuer](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.2.4) and
+   [signatureValue](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.1.3)
+   of this certificate.
    - In the issued certificate's Issuer field, the issuing certificate places
      its own Subject value. This allows the issuer to be identified later
      (without having to try signature validation against every known local
      certificate), when validating the presented certificate and chain.
    - The signature over the entire certificate (by the issuer's private key)
      is then placed in the signatureValue field.
- - The optional Authority Key Identifier field.
+ - The optional [Authority Key Identifier](https://datatracker.ietf.org/doc/html/rfc5280#section-4.2.1.1)
+   field.
    - This field can contain either (or both) of two values:
      - The hash of the issuer's public key. This extension is set and this
        value is filled in by Vault.
@@ -84,17 +90,23 @@ The following fields on the final certificate are relevant to rotation:
      (while having the same backing key material) will have different serial
      numbers. See the [Limitations of Primitives](#limitations-of-primitives)
      section below for more information on this restriction.
- - The Serial Number of this certificate.
+ - The [Serial Number](https://datatracker.ietf.org/doc/html/rfc5280#section-4.1.2.2)
+   of this certificate.
    - This field is unique to a specific issuer; when a certificate is
      reissued by its parent authority, it will always have a different serial
      number field.
- - The CRL distribution point field.
+ - The [CRL distribution](https://datatracker.ietf.org/doc/html/rfc5280#section-4.2.1.13)
+   point field.
    - This is a field detailing where a CRL is expected to exist for this
      certificate and under which CRL issuers (defaulting to the issuing
      certificate itself) the CRL is expected to be signed by. This is mostly
      informational and for server software like nginx, Vault's Cert Auth method,
      and Apache, CRLs are provided to the server, rather than having the
      server fetch CRLs for certificates automatically.
+   - Note that root certificates (in browsers trust stores) are generally not
+     considered revokable. However, if an intermediate is revoked by serial,
+     it will appear on its parent's CRL, and may prevent rotation from
+     happening.
 
 ## X.509 Rotation Primitives
 
@@ -109,10 +121,11 @@ in the trust store and not the end-entity certificate itself. In Vault, the
 requester would hit the various issuance endpoints (`/pki/issue/:name` or
 `/pki/sign/:name` -- or use the unsafe `/pki/sign-verbatim`) and swap out the
 old certificate with the new certificate and reload the configuration or
-restart the service. Other parts of the organizations might use ACME for
-certificate issuance and rotation, especially if the service is public-facing
-(and thus needs to be issued by a Public CA). Given it was signed by a trusted
-root, any devices connecting to the service would not know the difference.
+restart the service. Other parts of the organizations might use
+[ACME](https://datatracker.ietf.org/doc/html/rfc8555) for certificate issuance
+and rotation, especially if the service is public-facing (and thus needs to
+be issued by a Public CA). Given it was signed by a trusted root, any devices
+connecting to the service would not know the difference.
 
 Rotation of intermediate certificates is almost as easy. Assuming a decent
 operational setup (wherein during end-entity issuance, the full certificate
@@ -134,7 +147,7 @@ simultaneously (e.g., via an agent) with no missed devices, this process
 will likely span months.
 
 To make this process lower risk, there are various primitive certificate
-types that use the (above certificate fields)[#x.509-certificate-fields].
+types that use the [above certificate fields](#x-509-certificate-fields).
 Key to their success is the following note:
 
 ~> Note: While certificates are added to the trust store, it is ultimately
@@ -300,8 +313,8 @@ We can use the above primitive types to rotate roots and intermediates to new
 keys and extend their lifetimes. This time-based rotation is what ultimately
 allows us to rotate root certificates.
 
-There's two main variants of this: a forward primitive, wherein an old
-certificate is used to bless new key material, and a backwards primitive,
+There's two main variants of this: a **forward** primitive, wherein an old
+certificate is used to bless new key material, and a **backwards** primitive,
 wherein a new certificate is used to bless old key material. Both of these
 primitives are independently used by Let's Encrypt in the aforementioned
 chain of trust document:
@@ -324,14 +337,15 @@ move to a more standard, hierarchical setup.
 
 ### Limitations of Primitives
 
-The certificate's Authority Key Identifier extension field may contain either or
-both of the issuer's keyIdentifier (a hash of the public key) or both the
-issuer's Subject and Serial Number fields. Generating certificates with the
-latter enabled (luckily not possible in Vault, especially so since Vault uses
-strictly random serial numbers) prevents building a proper cross-signed chain
-without re-issuing the same serial number, which will not work with most
-browsers' trust stores and validation engines, due to [caching of certificates]
-(https://support.mozilla.org/en-US/kb/Certificate-contains-the-same-serial-number-as-another-certificate)
+The certificate's [Authority Key Identifier](https://datatracker.ietf.org/doc/html/rfc5280#section-4.2.1.1)
+extension field may contain either or both of the issuer's keyIdentifier
+(a hash of the public key) or both the issuer's Subject and Serial Number
+fields. Generating certificates with the latter enabled (luckily not possible
+in Vault, especially so since Vault uses strictly random serial numbers)
+prevents building a proper cross-signed chain without re-issuing the same
+serial number, which will not work with most browsers' trust stores and
+validation engines, due to [caching of
+certificates](https://support.mozilla.org/en-US/kb/Certificate-contains-the-same-serial-number-as-another-certificate)
 used in successful validations. In the strictest sense, when using a
 cross-signing primitive (from a different CA), the intermediate could be reissued
 with the same serial number, assuming no previous certificate was issued by that
