Add sections documenting execution in Vault
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/rotation-primitives.mdx
+++ b/website/content/docs/secrets/pki/rotation-primitives.mdx
@@ -238,6 +238,29 @@ This construct is documented and used in several places:
  - https://scotthelme.co.uk/cross-signing-alternate-trust-paths-how-they-work/
  - https://security.stackexchange.com/questions/14043/what-is-the-use-of-cross-signing-certificates-in-x-509
 
+#### Execution in Vault
+
+To create a cross-signed certificate in Vault, use the [`/intermediate/cross-sign`
+endpoint](/api-docs/secret/pki#generate-intermediate-csr). Here, when creating
+a cross-signature to all `cert B` to be validated by `cert A`, provide the values
+(`key_ref`, all Subject parts, &c) for `cert B` during intermediate generation.
+Then sign this CSR (using the [`/issuer/:issuer_ref/sign-intermediate`
+endpoint](/api-docs/secret/pki#sign-intermediate)) with `cert A`'s reference
+and provide necessary values from `cert B` (e.g., Subject parts). `cert A` may
+live outside Vault. Finally, import the cross-signed certificate into Vault
+[using the `/issuers/import/cert` endpoint](/api-docs/secret/pki#import-ca-certificates-and-keys).
+
+If this process succeeded, and both `cert A` and `cert B` and their key
+material lives in Vault, the newly imported cross-signed certificate
+will have a `ca_chain` response field [during read](/api-docs/secret/pki#read-issuer)
+containing `cert A`, and `cert B`'s `ca_chain` will contain the cross-signed
+cert and its `ca_chain` value.
+
+~> Note: Regardless of issuer type, is important to provide all relevant
+   parameters as they were originally; Vault does not infer e.g., the Subject
+   name parameters from the existing issuer; it merely reuses the same key
+   material.
+
 ### Reissuance Primitive
 
 The second most common type of rotation primitive. In this scheme, the existing
@@ -246,7 +269,7 @@ point in time from the existing issuance.
 
 While similar to the cross-signed primitive, this one differs in that usually
 the reissuance happens after the original certificate expires or is close to
-expiration and is re-issued by the original root CA. In the event of a
+expiration and is reissued by the original root CA. In the event of a
 self-signed certificate (e.g., a root certificate), this parent certificate
 would be itself. In both cases, this changes the contents of the certificate
 (due to the new serial number) but allows all existing leaf signatures to
@@ -300,12 +323,45 @@ intermediate certificate is presented and is still valid, only a root need be
 trusted. When a reissued certificate is a root certificate, the issuance link is
 simply self-loop. But, in this case, note that both certificates are
 (technically) valid issuers of each other. This means it should be possible to
-provide a re-issued root certificate in the TLS certificate chain and have it
+provide a reissued root certificate in the TLS certificate chain and have it
 chain back to an existing root certificate in a trust store.
 
 This primitive type is thus an incrementing primitive; the life cycle of an
 existing key is extended into the future by issuing a new certificate with the
 same key material from the existing authority.
+
+#### Execution in Vault
+
+To create a reissued root certificate in Vault, use [`/issuers/generate/root/existing`
+endpoint](/api-docs/secret/pki#generate-root). This allows the generation of a new
+root certificate with the existing key material (via the `key_ref` request parameter).
+If this process succeeded, when [reading the issuer](/api-docs/secret/pki#read-issuer)
+(via `GET /issuer/:issuer_ref`), both issuers (old and reissued) will appear in
+each others' `ca_chain` response field (unless prevented so by a `manual_chain`
+value).
+
+To create a reissued intermediate certificate in Vault, this is a three step
+process:
+
+ 1. Use the [`/issuers/generate/intermediate/existing`
+    endpoint](/api-docs/secret/pki#generate-intermediate-csr)
+    to generate a new CSR with the existing key material (with the `key_ref`
+    request parameter.
+ 2. Sign this CSR via the same signing process under the same issuer. This
+    step is specific to the parent CA, which may or may not be Vault.
+ 3. Finally, use the [`/intermediate/set-signed` endpoint](/api-docs/secret/pki#import-ca-certificates-and-keys)
+    to import the signed certificate from step 2.
+
+If the process to reissue an intermediate certificate succeeded, when
+[reading the issuer](/api-docs/secret/pki#read-issuer) (via
+`GET /issuer/:issuer_ref`), both issuers (old and reissued) will have
+the same `ca_chain` response field, except for the first entry (unless
+prevented so by a `manual_chain` value).
+
+~> Note: Regardless of issuer type, is important to provide all relevant
+   parameters as they were originally; Vault does not infer e.g., the Subject
+   name parameters from the existing issuer; it merely reuses the same key
+   material.
 
 ### Temporal Primitives
 
