Add leaf not after best practice
Also suggest concrete recommendations for lifetimes of various issuers.

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -108,6 +108,27 @@ is down.
    This is again a rationale for keeping TTLs short and avoiding revocation
    if possible.
 
+### NotAfter Behavior on Leaf Certificates
+
+In Vault 1.11.0, the PKI Secrets Engine has introduced a new
+`leaf_not_after_behavior` [parameter on
+issuers](/api-docs/secret/pki#leaf_not_after_behavior).
+This allows modification of the issuance behavior: should Vault `err`,
+preventing issuance of a longer-lived leaf cert than issuer, silently
+`truncate` to that of the issuer's `NotAfter` value, or `permit` longer
+expirations.
+
+It is strongly suggested to use `err` or `truncate` for intermediates;
+`permit` is only useful for root certificates, as intermediate's NotAfter
+expiration are checked when validating presented chains.
+
+In combination with a cascading expiration with longer lived roots (perhaps
+on the range of 2-10 years), shorter lived intermediates (perhaps on the
+range of 6 months to 2 years), and short-lived leaf certificates (on the
+range of 30 to 90 days), and the [rotation strategies discussed in other
+sections](/docs/secrets/pki/rotation-primitives), this should keep the
+CRLs adequately small.
+
 ## You must configure issuing/CRL/OCSP information _in advance_
 
 This secrets engine serves CRLs from a predictable location, but it is not
