Add advice to use a proper CA hierarchy
Also mention name constraints and HSM backing.

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -72,6 +72,31 @@ by the HSM and one backed by Vault -- can satisfy both use cases. Operators
 can make roles setting maximum TTLs for each issuer and consumers of the
 mount can decide which to use.
 
+## Use a CA Hierarchy
+
+It is generally recommended to use a hierarchical CA setup, with a root
+certificate which issues one or more intermediates (based on usage), which
+in turn issue the leaf certificates.
+
+This allows stronger storage or policy guarantees around [protection of the
+root CA](#be-careful-with-root-cas), while letting Vault manage the
+intermediate CAs and issuance of leaves. Different intermediates might be
+issued for different usage, such as VPN signing, Email signing, or testing
+versus production TLS services. This helps to keep CRLs limited to specific
+purposes: for example, VPN services don't care about the revoked set of
+email signing certificates if they're using separate certificates and
+different intermediates, and thus don't need both CRL contents. Additionally,
+this allows higher risk intermediates (such as those issuing longer-lived
+email signing certificates) to have HSM-backing without impacting the
+performance of easier-to-rotate intermediates and certificates (such as
+TLS intermediates).
+
+Vault supports the use of both the [`allowed_domains` parameter on
+Roles](/api-docs/secret/pki#allowed_domains) and the [`permitted_dns_domains`
+parameter to set the Name Constraints extension](/api-docs/secret/pki#permitted_dns_domains)
+on root and intermediate generation. This allows for several layers of
+separation of concerns between TLS-based services.
+
 ## Keep certificate lifetimes short, for CRL's sake
 
 This secrets engine aligns with Vault's philosophy of short-lived secrets. As
