Add section on safer usage of Roles
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -180,6 +180,40 @@ associated leases, to prevent unintended revocation when not using a token with
 a long enough lifetime. To revoke these certificates, use the `pki/revoke`
 endpoint.
 
+## Safe Usage of Roles
+
+The Vault PKI Secrets Engine supports many options to limit issuance via
+[Roles](http://localhost:3000/api-docs/secret/pki#create-update-role).
+Careful consideration of construction is necessary to ensure that more
+permissions are not given than necessary. Additionally, roles should generally
+do _one_ thing; multiple roles should be preferable over having too permissive
+roles that allow arbitrary issuance (e.g., `allow_any_name` should generally
+be used sparingly, if at all).
+
+ - `allow_any_name` should generally be set to `false`; this is the default.
+ - `allow_localhost` should generally be set to `false` for production
+   services, unless listening on `localhost` is expected.
+ - Unless necessary, `allow_wildcard_certificates` should generally be set to
+   `false`. This is **not** the default due to backwards compatibility
+   concerns.
+   - This is especially necessary when `allow_subdomains` or `allow_glob_domains`
+     are enabled.
+ - `enforce_hostnames` should generally be enabled for TLS services; this is
+   the default.
+ - `allow_ip_sans` should generally be set to `false` (but defaults to `true`),
+   unless IP address certificates are explicitly required.
+ - When using short TTLs (< 30 days) or with high issuance volume, it is
+   generally recommend to set `no_store` to `true` (defaults to `false`).
+   This prevents revocation but allows higher throughput as Vault no longer
+   needs to store every issued certificate. This is discussed more in the
+   [Certificate Storage](#certificate-storage) section below.
+ - Do not use roles with root certificates (`issuer_ref`). Root certificates
+   should generally only issue intermediates (see the section on [CA hierarchy
+   above](#use-a-ca-hierarchy)), which doesn't rely on roles.
+ - Limit `key_usage` and `ext_key_usage`; don't attempt to allow all usages
+   for all purposes. Generally the default values are useful for client and
+   server TLS authentication.
+
 ## Certificate Storage
 
 Unlike many secrets engines which replicate their state to all clusters
