--- a/website/content/docs/secrets/pki/rotation-primitives.mdx
+++ b/website/content/docs/secrets/pki/rotation-primitives.mdx
@@ -104,7 +104,7 @@ The following fields on the final certificate are relevant to rotation:
      and Apache, CRLs are provided to the server, rather than having the
      server fetch CRLs for certificates automatically.
    - Note that root certificates (in browsers trust stores) are generally not
-     considered revokable. However, if an intermediate is revoked by serial,
+     considered revocable. However, if an intermediate is revoked by serial,
      it will appear on its parent's CRL, and may prevent rotation from
      happening.
 
@@ -345,7 +345,7 @@ process:
 
  1. Use the [`/issuers/generate/intermediate/existing`
     endpoint](/api-docs/secret/pki#generate-intermediate-csr)
-    to generate a new CSR with the existing key material (with the `key_ref`
+    to generate a new CSR with the existing key material with the `key_ref`
     request parameter.
  2. Sign this CSR via the same signing process under the same issuer. This
     step is specific to the parent CA, which may or may not be Vault.
