--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -517,6 +517,9 @@ can be set in a CSR are supported.
 - `key_type` `(string: "rsa")` – Specifies the desired key type; must be `rsa`, `ed25519`
   or `ec`.
 
+~> **Note**: In FIPS 140-2 mode, the following algorithms are not certified
+   and thus should not be used: `ed25519`.
+
 - `key_bits` `(int: 0)` – Specifies the number of bits to use for the
   generated keys. Allowed values are 0 (universal default); with
   `key_type=rsa`, allowed values are: 2048 (default), 3072, or
@@ -961,6 +964,9 @@ request is denied.
   existing CSRs, `any` can be specified to allow keys of either type
   and with any bit size (subject to >1024 bits for RSA keys).
 
+~> **Note**: In FIPS 140-2 mode, the following algorithms are not certified
+   and thus should not be used: `ed25519`.
+
 - `key_bits` `(int: 0)` – Specifies the number of bits to use for the
   generated keys. Allowed values are 0 (universal default); with
   `key_type=rsa`, allowed values are: 2048 (default), 3072, or
@@ -1256,6 +1262,9 @@ overwrite the existing cert/key with new values.
 
 - `key_type` `(string: "rsa")` – Specifies the desired key type; must be `rsa`, `ed25519`
   or `ec`.
+
+~> **Note**: In FIPS 140-2 mode, the following algorithms are not certified
+   and thus should not be used: `ed25519`.
 
 - `key_bits` `(int: 0)` – Specifies the number of bits to use for the
   generated keys. Allowed values are 0 (universal default); with
