Add initial RBAC example for PKI
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -297,6 +297,79 @@ nature:
  - `pem_bundle` this request parameter is only used on the issuer-import
    paths and may contain sensitive private key material.
 
+## Role-Based Access
+
+Vault supports [path-based ACL Policies](https://learn.hashicorp.com/tutorials/vault/getting-started-policies)
+for limiting access to various paths within Vault.
+
+The following is a condensed example reference of ACLing the PKI Secrets
+Engine. These are just a suggestion; other personas and policy approaches
+may also be valid.
+
+We suggest the following personas:
+
+ - *Operator*;  a privileged user who manages the health of the PKI
+   subsystem; manages issuers and key material.
+ - *Agent*; a semi-privileged user that manages roles and handles
+   revocation on behalf of an operator; may also handle delegated
+   issuance. This may also be called an *administrator* or *role
+   manager*.
+ - *Advanced*; potentially a power-user or service that has access to
+   additional issuance APIs.
+ - *Requester*; a low-level user or service that simply requests certificates.
+ - *Unauthed*; any arbitrary user or service that lacks a Vault token.
+
+For these personas, we suggest the following ACLs, in condensed, tabular form:
+
+| Path | Operations | Operator | Agent | Advanced | Requester | Unauthed |
+| :--- | :--------- | :------- | :---- | :------- | :-------- | :------- |
+| `/ca(/pem)?` | Read | Yes | Yes | Yes | Yes | Yes |
+| `/ca_chain` | Read | Yes | Yes | Yes | Yes | Yes |
+| `/crl(/pem)?` | Read | Yes | Yes | Yes | Yes | Yes |
+| `/cert/:serial(/raw(/pem)?)?` | Read | Yes | Yes | Yes | Yes | Yes |
+| `/issuers` | List | Yes | Yes | Yes | Yes | Yes |
+| `/issuer/:issuer_ref/(json¦der¦pem)` | Read | Yes | Yes | Yes | Yes | Yes |
+| `/issuer/:issuer_ref/crl(/der¦/pem)?` | Read | Yes | Yes | Yes | Yes | Yes |
+| `/certs` | List | Yes | Yes | Yes | Yes | |
+| `/roles` | List | Yes | Yes | Yes | Yes | |
+| `/roles/:role` | Read | Yes | Yes | Yes | Yes | |
+| `/(issue¦sign)/:role` | Write | Yes | Yes | Yes | Yes | |
+| `/issuer/:issuer_ref/(issue¦sign)/:role` | Write | Yes | Yes | Yes | | |
+| `/config/ca` | Read | Yes | Yes |  |  |  |
+| `/config/crl` | Read | Yes | Yes |  |  |  |
+| `/config/issuers` | Read | Yes | Yes |  |  |  |
+| `/crl/rotate` | Read | Yes | Yes | | | |
+| `/roles/:role` | Write | Yes | Yes | | | |
+| `/issuer/:issuer_ref` | Read | Yes | Yes | | | |
+| `/sign-verbatim(/:role)?` | Write | Yes | Yes | | | |
+| `/issuer/:issuer_ref/sign-verbatim(/:role)?` | Write | Yes | Yes | | | |
+| `/revoke` | Write | Yes | Yes | | | |
+| `/tidy` | Write | Yes | Yes | | | |
+| `/tidy-status` | Read | Yes | Yes | | | |
+| `/config/ca` | Write | Yes | |  |  |  |
+| `/config/crl` | Write | Yes | |  |  |  |
+| `/config/issuers` | Write | Yes | |  |  |  |
+| `/config/keys` | Read, Write | Yes | |  |  |  |
+| `/config/urls` | Read, Write | Yes | |  |  |  |
+| `/issuer/:issuer_ref` | Write | Yes | | | | |
+| `/issuer/:issuer_ref/sign-intermediate` | Write | Yes | | | | |
+| `/issuer/issuer_ref/sign-self-issued` | Write | Yes | | | | |
+| `/issuers/generate/+/+` | Write | Yes | | | | |
+| `/issuers/import/+` | Write | Yes | | | | |
+| `/intermediate/generate/+` | Write | Yes | | | | |
+| `/intermediate/cross-sign` | Write | Yes | | | | |
+| `/intermediate/set-signed` | Write | Yes | | | | |
+| `/keys` | List | Yes | | | | |
+| `/key/:key_ref` | Read, Write | Yes | | | | |
+| `/keys/generate/+` | Write | Yes | | | | |
+| `/keys/import` | Write | Yes | | | | |
+| `/root/generate/+` | Write | Yes | | | | |
+| `/root/sign-intermediate` | Write | Yes | | | | |
+| `/root/sign-self-issued` | Write | Yes | | | | |
+| `/root/rotate/+` | Write | Yes | | | | |
+| `/root/replace` | Write | Yes | | | | |
+
+
 ## Learn
 
 Refer to the [Build Your Own Certificate Authority (CA)](https://learn.hashicorp.com/vault/secrets-management/sm-pki-engine)
