Add note about cross-cluster CRL URIs
As suggested by Ricardo Oliveira, thanks!

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -163,6 +163,13 @@ OCSP servers manually using the `config/urls` endpoint. It is supported to have
 more than one of each of these by passing in the multiple URLs as a
 comma-separated string parameter.
 
+~> Note: when using Vault Enterprise's Performance Replication features with a
+   PKI Secrets Engine mount, each cluster will have its own CRL; this means
+   each cluster's unique CRL address should be included in the [AIA
+   information](https://datatracker.ietf.org/doc/html/rfc5280#section-5.2.7)
+   field separately, or the CRLs should be consolidated and served outside of
+   Vault.
+
 ## Safe Minimums
 
 Since its inception, this secrets engine has enforced SHA256 for signature
