--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -699,7 +699,7 @@ have access.**
   Specifies the default key usage constraint on the issued certificate. Valid
   values can be found at https://golang.org/pkg/crypto/x509/#KeyUsage - simply
   drop the `KeyUsage` part of the value. Values are not case-sensitive. To
-  specify no key usage constraints, set this to an empty list.
+  specify no default key usage constraints, set this to an empty list.
 
 ~> Note: previous versions of this document incorrectly called this a constraint;
    this value is only used as a default when the `KeyUsage` extension is missing
@@ -709,7 +709,7 @@ have access.**
   Specifies the default extended key usage constraint on the issued certificate. Valid
   values can be found at https://golang.org/pkg/crypto/x509/#ExtKeyUsage - simply
   drop the `ExtKeyUsage` part of the value. Values are not case-sensitive. To
-  specify no key usage constraints, set this to an empty list.
+  specify no key default usage constraints, set this to an empty list.
 
 ~> Note: previous versions of this document incorrectly called this a constraint;
    this value is only used as a default when the `ExtendedKeyUsage` extension is
