--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -9,8 +9,8 @@ description: >-
 # Kubernetes Secrets Engine
 
 The Kubernetes Secrets Engine for Vault generates Kubernetes service account tokens, and
-optionally service accounts, role bindings, and roles. The created service account tokens are
-time-based and are automatically revoked when the Vault lease expires.
+optionally service accounts, role bindings, and roles. The created service account tokens have
+a configurable TTL and any objects created are automatically deleted when the Vault lease expires.
 
 Vault will create a service account token for each lease that provides appropriate access to the
 defined service account. The service account token is returned to the caller.
