--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -26,7 +26,7 @@ The Kubernetes Secrets Engine, like most secrets engines, must be configured in 
 can perform its functions. These steps are usually completed by an operator or configuration
 management tool.
 
-1. Internally, Vault will connect to Kubernetes using its own service account.
+1. By default, Vault will connect to Kubernetes using its own service account.
    If using the [standard Helm chart](https://github.com/hashicorp/vault-helm), this service account
    is created automatically by default and named after the Helm release (often `vault`, but this can be
    configured via the Helm value `server.serviceAccount.name`).
