--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -12,7 +12,7 @@ The Kubernetes Secrets Engine for Vault generates Kubernetes service account tok
 optionally service accounts, role bindings, and roles. The created service account tokens have
 a configurable TTL and any objects created are automatically deleted when the Vault lease expires.
 
-Vault will create a service account token for each lease that provides appropriate access to the
+For each lease, Vault will create a service account token attached to the
 defined service account. The service account token is returned to the caller.
 
 To learn more about service accounts in Kubernetes, visit the
