--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -32,9 +32,9 @@ management tool.
    configured via the Helm value `server.serviceAccount.name`).
 
    It's necessary to ensure that the service account Vault uses will have permissions to manage
-   service account tokens, and optionally manage service accounts, roles, and role bindings. This
-   is usually done with a Kuberentes role or cluster role attached to the Vault service account
-   with a role binding or cluster role binding, respectively.
+   service account tokens, and optionally manage service accounts, roles, and role bindings. These
+   permissions can be managed using a Kuberentes role or cluster role. The role is attached to the
+   Vault service account with a role binding or cluster role binding.
 
    For example, a minimal cluster role to create service account tokens is:
    ```yaml
