--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -83,8 +83,8 @@ management tool.
      - delete
    ```
 
-   You create this role in Kubernetes (e.g., with `kubectl apply -f`).
-   Then, you will need to create a role binding to bind the role to Vault's service account to
+   Create this role in Kubernetes (e.g., with `kubectl apply -f`).
+   Next, create a role binding to bind the role to Vault's service account and
    grant Vault permission to manage tokens.
 
    ```yaml
