--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -284,7 +284,7 @@ automatically generate the Kubernetes service account and role binding,
 and optionally generate the Kubernetes role itself.
 
 If we want to configure the Vault role to use a pre-existing Kubernetes role, but generate
-the service account and role binding automatically, we can set the `kubernetes_role_name`
+the service account and role binding automatically, you can set the `kubernetes_role_name`
 parameter.
 
 ```shell-session
