--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -270,10 +270,11 @@ service_account_token      eyJHbGci0iJSUzI1NiIsImtpZCI6ImlrUEE...
 ```
 
 
-You can verify the token's TTL by decoding the JWT token and extracting the `exp` field.
+You can verify the token's TTL by decoding the JWT token and extracting the `iat`
+(issued at) and `exp` (expiration time) claims.
 
 ```shell-session
-$ echo 'eyJhbGc...' | cut -d'.' -f2 | base64 -d  | jq -r '.exp|todateiso8601'
+$ echo 'eyJhbGc...' | cut -d'.' -f2 | base64 -d  | jq -r '.iat,.exp|todate'
 2022-05-20T10:18:05Z
 ```
 
