s/we/you/g mostly

--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -105,14 +105,15 @@ management tool.
    For more information on Kubernetes roles, service accounts, bindings, and tokens, visit the
    [Kubernetes RBAC documentation](https://kubernetes.io/docs/reference/access-authn-authz/rbac/).
 
-2. If Vault will not be automatically managing roles or service accounts (see
+1. If Vault will not be automatically managing roles or service accounts (see
    [Automatically Managing Roles and Service Accounts](#automatically-managing-roles-and-service-accounts)),
-   then we will need to set up a service account that Vault will issue tokens for.
+   then you will need to set up a service account that Vault will issue tokens for.
 
    ~> **Note**: It is highly recommended that the service account that Vault issues tokens for
       is **NOT** the same service account that Vault itself uses.
 
-   We will run everything under the namespace `test`, which we can create if it does not already exist.
+   The examples we will use will under the namespace `test`, which you can create if it does not
+   already exist.
 
    ```shell-session
    $ kubectl create namespace test
@@ -153,9 +154,9 @@ management tool.
      namespace: test
    ```
 
-   We can create these objects with `kubectl apply -f`.
+   You can create these objects with `kubectl apply -f`.
 
-3. Enable the Kubernetes Secrets Engine:
+1. Enable the Kubernetes Secrets Engine:
 
    ```shell-session
    $ vault secrets enable kubernetes
@@ -165,7 +166,7 @@ management tool.
    By default, the secrets engine will mount at the same name as the engine, i.e.,
    `kubernetes/` here. This can be changed by passing the `-path` argument when enabling.
 
-4. Configure the mount point. An empty config is allowed.
+1. Configure the mount point. An empty config is allowed.
 
    ```shell-session
    $ vault write -f kubernetes/config
@@ -174,7 +175,7 @@ management tool.
    Configuration options are available as specified in the
    [API docs](/api-docs/secret/kubernetes).
 
-5. We can now configure Kubernetes Secrets Engine to create a Vault role (**not** the same as a
+1. You can now configure Kubernetes Secrets Engine to create a Vault role (**not** the same as a
    Kubernetes role) that can generate service account tokens for the given service account:
 
    ```shell-session
@@ -203,7 +204,7 @@ service_account_namespace  test
 service_account_token      eyJHbGci0iJSUzI1NiIsImtpZCI6ImlrUEE...
 ```
 
-We can use the service account token above (`eyJHbG...`) with any Kubernetes API request that
+You can use the service account token above (`eyJHbG...`) with any Kubernetes API request that
 its service account is authorized for (through role bindings).
 
 ```shell-session
@@ -219,7 +220,7 @@ $ curl -sk $(kubectl config view -o 'jsonpath={.clusters[0].cluster.server}')/ap
 }
 ```
 
-When the lease expires, we can verify that the token has been revoked.
+When the lease expires, you can verify that the token has been revoked.
 ```shell-session
 $ curl -sk $(kubectl config view -o 'jsonpath={.clusters[0].cluster.server}')/api/v1/namespaces/test/pods \
     --header "Authorization: Bearer eyJHbGci0iJSUzI1Ni..."
@@ -280,11 +281,11 @@ $ echo 'eyJhbGc...' | cut -d'.' -f2 | base64 -d  | jq -r '.iat,.exp|todate'
 
 ## Automatically Managing Roles and Service Accounts
 
-When configuring the Vault role, we can pass in parameters to specify that we want to
+When configuring the Vault role, you can pass in parameters to specify that you want to
 automatically generate the Kubernetes service account and role binding,
 and optionally generate the Kubernetes role itself.
 
-If we want to configure the Vault role to use a pre-existing Kubernetes role, but generate
+If you want to configure the Vault role to use a pre-existing Kubernetes role, but generate
 the service account and role binding automatically, you can set the `kubernetes_role_name`
 parameter.
 
@@ -297,7 +298,7 @@ $ vault write kubernetes/roles/auto-managed-sa-role \
 ~> **Note**: Vault's service account will also need access to the resources it is granting
 access to. This can be done for the examples above with `kubectl -n test create rolebinding --role test-role-list-pods --serviceaccount=vault:vault vault-test-role-abilities`.
 
-We can then get credentials with the automatically generated service account.
+You can then get credentials with the automatically generated service account.
 ```shell-session
 $ vault write kubernetes/creds/auto-managed-sa-role \
     kubernetes_namespace=test
@@ -320,7 +321,7 @@ $ vault write kubernetes/roles/auto-managed-sa-and-role \
     allowed_kubernetes_namespaces="test" \
     generated_role_rules='{"rules":[{"apiGroups":[""],"resources":["pods"],"verbs":["list"]}]}'
 ```
-We can then get credentials in the same way as before.
+You can then get credentials in the same way as before.
 ```shell-session
 $ vault read kubernetes/creds/auto-managed-sa-and-role \
     kubernetes_namespace=test
