--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -22,7 +22,7 @@ documentation.
 
 ## Setup
 
-The Kubernetes Secrets Engine, like most secrets engines, must be configured in advance before it
+The Kubernetes Secrets Engine must be configured in advance before it
 can perform its functions. These steps are usually completed by an operator or configuration
 management tool.
 
