--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -250,7 +250,7 @@ $ vault write kubernetes/roles/my-role \
     token_max_ttl="2h"
 ```
 
-You can also set a TTL (`ttl`) when generate the token from the credentials endpoint.
+You can also set a TTL (`ttl`) when you generate the token from the credentials endpoint.
 The TTL of the token will be given the default if not specified (and cannot exceed the
 maximum TTL of the role, if present).
 
