--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -263,7 +263,7 @@ Key                        Value
 lease_id                   kubernetes/creds/my-role/31d771a6-...
 lease_duration             20m0s
 lease_renwable             false
-service_account_name       default
+service_account_name       new-service-account-with-generated-token
 service_account_namespace  test
 service_account_token      eyJHbGci0iJSUzI1NiIsImtpZCI6ImlrUEE...
 ```
