Add --minify to curl

--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -206,7 +206,7 @@ You can use the service account token above (`eyJHbG...`) with any Kubernetes AP
 its service account is authorized for (through role bindings).
 
 ```shell-session
-$ curl -sk $(kubectl config view -o 'jsonpath={.clusters[0].cluster.server}')/api/v1/namespaces/test/pods \
+$ curl -sk $(kubectl config view --minify -o 'jsonpath={.clusters[].cluster.server}')/api/v1/namespaces/test/pods \
     --header "Authorization: Bearer eyJHbGci0iJSUzI1Ni..."
 {
   "kind": "PodList",
@@ -220,7 +220,7 @@ $ curl -sk $(kubectl config view -o 'jsonpath={.clusters[0].cluster.server}')/ap
 
 When the lease expires, you can verify that the token has been revoked.
 ```shell-session
-$ curl -sk $(kubectl config view -o 'jsonpath={.clusters[0].cluster.server}')/api/v1/namespaces/test/pods \
+$ curl -sk $(kubectl config view --minify -o 'jsonpath={.clusters[].cluster.server}')/api/v1/namespaces/test/pods \
     --header "Authorization: Bearer eyJHbGci0iJSUzI1Ni..."
 {
   "kind": "Status",
