--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -238,7 +238,7 @@ $ curl -sk $(kubectl config view --minify -o 'jsonpath={.clusters[].cluster.serv
 Kubernetes service account tokens have a time-to-live (TTL). When a token expires it is
 automatically revoked.
 
-You can set a default (`token_defaul_ttl`) and a maximum TTL (`token_max_ttl`) when
+You can set a default (`token_default_ttl`) and a maximum TTL (`token_max_ttl`) when
 creating or tuning the Vault role.
 
 ```shell-session
