--- a/website/content/docs/secrets/kubernetes.mdx
+++ b/website/content/docs/secrets/kubernetes.mdx
@@ -185,7 +185,7 @@ management tool.
 
 ## Generating Credentials
 
-After a user has authenticated to Vault and has sufficient permissions, a read request to the
+After a user has authenticated to Vault and has sufficient permissions, a write to the
 `creds` endpoint for the Vault role will generate and return a new service account token.
 
 ```shell-session
