backport of commit ac0e71c275a86eb3029b48dfb4a1ab9d3f7abd02

--- a/website/content/docs/commands/operator/init.mdx
+++ b/website/content/docs/commands/operator/init.mdx
@@ -119,3 +119,5 @@ flags](/docs/commands) included on all commands.
 
 - `-stored-shares` `(int: 0)` - Number of unseal keys to store on an HSM. This
   must be equal to `-key-shares`.
+
+Refer to the [Seal/Unseal](/docs/concepts/seal#auto-unseal) documentation to learn more about recovery keys.
