Add more sample payloads for creating roles

--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -153,10 +153,36 @@ Only one of `service_account_name`, `kubernetes_role_name` or
 
 ### Sample Payload
 
+To generate tokens for a pre-existing service account:
+
 ```json
 {
   "allowed_kubernetes_namespaces": "*",
-  "service_account_name": "default"
+  "service_account_name": "default",
+  "token_max_ttl": "24h"
+}
+```
+
+### Sample Payload 2
+
+To generate tokens for a pre-existing role:
+
+```json
+{
+  "allowed_kubernetes_namespaces": "*",
+  "kubernetes_role_type": "ClusterRole",
+  "kubernetes_role_name": "vault-k8s-secrets-role"
+}
+```
+
+### Sample Payload 3
+
+To generate tokens for a defined set of Kubernetes role rules:
+
+```json
+{
+  "allowed_kubernetes_namespaces": "*",
+  "generated_role_rules": "rules:\n- apiGroups: [\"\"]\n  resources: [\"pods\"]\n  verbs: [\"list\"]\n",
 }
 ```
 
@@ -206,7 +232,7 @@ $ curl \
     "name_template": "",
     "service_account_name": "default",
     "token_default_ttl": 0,
-    "token_max_ttl": 0
+    "token_max_ttl": 86400
   }
 }
 ```
