--- a/website/content/api-docs/secret/kubernetes.mdx
+++ b/website/content/api-docs/secret/kubernetes.mdx
@@ -87,7 +87,7 @@ $ curl \
 
 ## Delete Configuration
 
-Returns the config previously set, excluding credentials.
+Deletes the config previously set.
 
 | Method   | Path                      |
 | :------- | :------------------------ |
